A "good enough" fix for {bz: 1338} to better lay out the weblog view - there is one minor layout bug but that will be entered as a lower priority bug.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/branches/iteration-2008-09-19@10209 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -3,6 +3,10 @@
 
 /* overloads */
 
+body#blog div#controls div#controlsRight, div#st-editing-tools-edit {
+    width: auto !important;
+}
+
 div#contentColumns.hidebox #contentLeft {
     width: 97%;
 }
